--- a/public/app/labs/labs.html
+++ b/public/app/labs/labs.html
@@ -19,10 +19,12 @@
 </section>
 
 <section class="labs_categories">
-    <div class="wrapper">
-
-        <codesample ng-class="cat.color" category-obj="cat" search-code="searchCode(query)" ng-repeat="cat in codeCategoriesCollection" template-url="components/codesample/categories.html"></codesample>
-        
+    <div class="wrapper" ng-hide="codeSamplesCollection">
+        <codecategory ng-class="cat.color" category-obj="cat" search-code="searchCode(query)" ng-repeat="cat in codeCategoriesCollection" template-url="components/codesample/categories.html"></codecategory>
+        <br class="clr" >
+    </div>
+    <div class="wrapper samples" ng-show="codeSamplesCollection">
+        <codesample sample-obj="sample" ng-repeat="sample in codeSamplesCollection" template-url="components/codesample/codesample.html"></codesample>
         <br class="clr" >
     </div>
 </section>
